# EzAvg

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lua/: Config.lua  Game.lua  Style.lua  StyleSheets.lua
lua/behaviour/: AnimFadeIn.lua  AnimTextPrinter.lua  AnimTransform.lua  ControlButton.lua  ControlDragable.lua  LayoutHorizontal.lua  LayoutVertical.lua  SceneGame.lua  ScenePause.lua  _BehaviourTemplate.lua
lua/control/: Button.lua  _ControlTemplate.lua
lua/task/: AddBehaviour.lua  BehaviourAdd.lua  BehaviourRemove.lua  Branch.lua  CreateSprite.lua  GameDialogHide.lua  GameDialogShow.lua  GameInit.lua  Goto.lua  Init.lua  RemoveSprite.lua  SceneSet.lua  SetSprite.lua  SpriteCreate.lua  SpriteRemove.lua  SpriteSet.lua  Wait.lua  _TaskTemplate.lua
scene/: MainMenu.scene  Startup.scene
scene/game/: GameFirstScene.scene
scene/popScene/: GameLoad.scene  GamePause.scene  GameSave.scene  MessageBox.scene
src/: CMakeLists.txt  eaApplication.cpp  eaApplication.h  eaFont.cpp  eaFont.h  eaInput.cpp  eaInput.h  eaLogger.cpp  eaLua.cpp  eaLua.h  eaLuaBridge.cpp  eaLuaBridge.h  eaLuaDomain.cpp  eaLuaDomain.h  eaLuaEnv.cpp  eaLuaEnv.h  eaLuaFunctionDefines.cpp  eaLuaFunctionDefines.h  eaProfileNode.cpp  eaProfileNode.h  eaResources.cpp  eaResources.h  eaSaveable.h  eaScene.cpp  eaScene.h  eaScript.cpp  eaScript.h  eaScriptRunner.cpp  eaScriptRunner.h  eaSprite.cpp  eaSprite.h  eaSpriteGroup.cpp  eaSpriteGroup.h  eaSpriteImage.cpp  eaSpriteImage.h  eaSpriteText.cpp  eaSpriteText.h  eaTexture.cpp  eaTexture.h  eaTime.cpp  (+7 more)
